--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
   
       </div> 
     </div>
+      <div class="copyright">Copyright © 2024 Entrepreneurship Cell, <span class="RGIPT">RGIPT</span></div>
   </footer>
   
 
